@startuml
[*] --> CREATED

CREATED -> REJECTED : Responder not interested
CREATED --> QUOTED : Responder\nquotes
CREATED --> EXPIRED : No response\nbefore timeout

QUOTED --> COUNTERED : Requestor proposes\nnew price
QUOTED --> ACCEPTED : Requestor accepts\nprice
QUOTED --> REJECTED : Requestor rejects price\nand terminates Rfq
QUOTED --> EXPIRED : No response\nbefore timeout

CREATED --> CANCELED : Requestor\ncancels Rfq
QUOTED --> CANCELED : Requestor\ncancels Rfq
COUNTERED --> EXPIRED :  No response\nbefore timeout
COUNTERED --> CANCELED :  Requestor cancels Rfq
COUNTERED --> COUNTERED : Responder proposes\nnew price\nfollowing COUNTERED
COUNTERED --> ACCEPTED : Requestor accepts\nnew price
COUNTERED --> ACCEPTED : Responder accepts\nnew price
COUNTERED --> REJECTED : Requestor rejects price\nand terminates Rfq
COUNTERED --> REJECTED : Responder rejects price\nand terminates Rfq

ACCEPTED --> COMPLETED : Rfq is accepted,\nTrade is created

REJECTED --> [*] : Rfq is rejected\nand terminates
COMPLETED --> [*] : Rfq is completed\nand terminates
CANCELED --> [*] : Rfq is canceled\nand terminates
EXPIRED --> [*] : Rfq expires\nand terminates

@enduml
